# Gunnhildr

./: .gitignore  Cargo.toml
app/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m201238920_000001_create_tables.rs
migrations/sqlite/: 20241207082654_initial_table_setup.sql
src/: api.rs  config.rs  main.rs
src/books/: mod.rs
src/db/: mod.rs  models.rs  postgres.rs  sqlite.rs
src/entity/: book.rs  chapter.rs  mod.rs  prelude.rs  user.rs
src/reading/: mod.rs
src/store/entity/: book_iden.rs  chapter_iden.rs  mod.rs  prelude.rs  user_iden.rs
