[package]
name = "gunnhildr"
version = "0.1.0"
edition = "2021"
authors = ["TheMorrigna"]

[dependencies]
actix-session = "0.10.1"
actix-web = "4.9.0"
anyhow = "1.0.94"
chrono = "0.4.39"
comrak = "0.32.0"
env_logger = "0.11.5"
figment = "0.10.19"
log = "0.4.22"
maud = { version = "0.26.0", features = ["actix-web"] }
sea-query = { version = "0.32.1", features = ["all-features"] }
serde = { version = "1.0.216", features = ["derive"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio", "postgres", "sqlite"] }
tokio = "1.42.0"
