[package]
name = "gunnhildr"
version = "0.1.0"
edition = "2021"
authors = ["TheMorrigna"]

[dependencies]
tokio = "1.42.0"
actix-session = "0.10.1"
actix-web = "4.9.0"
anyhow = "1.0.94"
argon2 = "0.5.3"
chrono = "0.4.39"
comrak = "0.32.0"
env_logger = "0.11.5"
figment = "0.10.19"
log = "0.4.22"
maud = { version = "0.26.0", features = ["actix-web"] }
serde = { version = "1.0.216", features = ["derive"] }
sea-orm = { version = "1.1.3", features = [
    "runtime-actix-native-tls",
    "sqlx-sqlite",
    "sqlx-postgres",
] }
migration = { path = "./migration" }

[workspace]
members = ["migration"]
